projects/amiya.akn/src/apps/*pocket-id/pocket-id.deployment.yaml
---
# trunk-ignore-all(checkov/CKV_K8S_21): Namespace is managed by kustomize
# trunk-ignore-all(checkov/CKV_K8S_35): SMTP_USER cannot be exposed as a file like other secrets
# trunk-ignore-all(trivy/KSV0125): The image comes from a Github registry so ... I trust it for now
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: pocket-id-server
  name: pocket-id-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: application
      app.kubernetes.io/instance: pocket-id-server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: application
        app.kubernetes.io/instance: pocket-id-server
    spec:
      automountServiceAccountToken: false
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 1411
              name: http
              protocol: TCP
            - containerPort: 9464
              name: metrics
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 2
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: data
              mountPath: /data
            - name: pocket-id-secrets
              mountPath: /var/run/secrets/pocket-id.org
              readOnly: true
      volumes:
        - name: data
          emptyDir: {}
        - name: pocket-id-secrets
          projected:
            sources:
              - secret:
                  name: pocket-id-secrets
                  items:
                    - key: maxmind_license_key
                      path: maxmind_license_key
                    - key: encryption_key
                      path: encryption_key
                    - key: smtp_password
                      path: smtp_password
              - secret:
                  name: pocket-id-database-pocket-id
                  items:
                    - key: uri
                      path: postgres_connection_string
      securityContext:
        fsGroup: 45706
        runAsGroup: 45706
        runAsNonRoot: true
        runAsUser: 45706
        seccompProfile:
          type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: application
  name: pocket-id
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: application
    app.kubernetes.io/instance: pocket-id-server
