projects/amiya.akn/src/apps/*pocket-id/pocket-id.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
    link.argocd.argoproj.io/external-link: https://sso.chezmoi.sh
  name: pocket-id
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default
      namespace: envoy-gateway-system
      sectionName: chezmoi.sh-websecure
  hostnames:
    - sso.chezmoi.sh
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pocket-id
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
